vbnc/vbnc/tests/Errors/30060-8.vb
Class T
    Const M_String As String = #1/1/2008#
End Class